<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CondesaAccesible</string>
    <string name="title_activity_main">Condesa Accesible</string>
    <string name="google_maps_key">AIzaSyBVy5AeNC0FzQD1aKpZciL06wtLQ5qd2k4</string>
    <string name="greenButtonLabel">verde</string>
    <string name="buttonBlueLabel">Blue</string>
    <string name="buttonYellowLabel">Yellow</string>
    <string name="buttonRedLabel">Red</string>
    <string name="autocompletePlaceholder">¿A dónde quieres ir?</string>
    <string name="mapCenterName">mapCenter</string>

</resources>
